# crawlers

./: .gitignore  LICENSE  README.md  pyproject.toml  scrapy.cfg
src/: items.py  models.py  pipelines.py  settings.py
src/spiders/: tudogostoso.py
