[tool.poetry]
name = "crawlers"
version = "0.1.0"
description = "Raspar diversos sites de receitas veganas."
authors = ["igor-taconi <igortaconi1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"
peewee = "^3.14.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
flake8 = "^3.9.2"
ipdb = "^0.13.9"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
